--- a/index.html
+++ b/index.html
@@ -4,48 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script src="js/script.js" defer></script>
+    <title>Calculadora</title>
 </head>
 <body>
-    <div id="conteiner">
-        <main>
-            <section id="conteinerHead">
-                <div id="titulo"><h1>Calculadora</h1></div>
-                <input type="number" name="resultado" id="resultado" disabled>
-            </section>
-            <section id="conteinerButtons">
-                    <!-- Linha 1 -->             
-                    <button>%</button>
-                    <button>x²</button>
-                    <button>C</button>
-                    <button class="material-symbols-outlined">backspace</button>
-                    <!-- Linha 2-->  
-                    <button>÷</button>
-                    <button>x</button>
-                    <button>-</button>
-                    <button id="btn-mais">+</button>
-                    <!-- Linha 3 (junto com o botão de mais)-->
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <!-- Linha 4 (Junto com o botão de mais)-->  
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <!-- Linha 5-->  
-                    <button id="btn-igual">=</button>
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <!-- Linha 6 (Junto com o botão de igual)-->              
-                    <button>+/-</button>
-                    <button>0</button>        
-                    <button>,</button>              
-            </section>
-        </main>
-    </div>
+    <main>
+        <h1>Calculadora</h1>
+        <div id="operacoes">
+            <div id="operacao-anterior">123</div>
+            <div id="operacao-atual">321</div>
+        </div>
+        <div id="buttons-conteiner">
+             <button>CE</button>
+             <button>C</button>
+             <button>DEL</button>
+             <button>/</button>
+             <button class="btn-numero">7</button>
+             <button class="btn-numero">8</button>
+             <button class="btn-numero">9</button>
+             <button>*</button>
+             <button class="btn-numero">4</button>
+             <button class="btn-numero">5</button>
+             <button class="btn-numero">6</button>
+             <button>-</button>
+             <button class="btn-numero">1</button>
+             <button class="btn-numero">2</button>
+             <button class="btn-numero">3</button>
+             <button>+</button>
+             <button class="btn-numero">+/-</button>
+             <button class="btn-numero">0</button>
+             <button class="btn-numero">.</button>      
+             <button id="btn-igual">=</button>
+        </div>
+    </main>  
 </body>
 </html>
